fix scroll bars showing in FF
Horizontal scroll bar showed for Chart in FF when hovering "Reset axes"

--- a/src/components/data/DataChart.css
+++ b/src/components/data/DataChart.css
@@ -1,6 +1,7 @@
 sf-data-chart {
   background-color: darkolivegreen;
   flex: 1 1 100%;
+  overflow: hidden;
 }
 
 /* set initially to prevent flash of unstyled chart */
